[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-financial"
version = "0.1.0"
description = "Hybrid financial document retriever for LangChain with RRF fusion and metadata filtering"
readme = "README.md"
requires-python = ">=3.9.0,<4.0.0"
license = {text = "MIT"}
authors = [
    {name = "LangChain Financial Team", email = "financial@langchain.com"}
]
keywords = ["langchain", "financial", "retriever", "hybrid", "rrf", "fusion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    "rank-bm25>=0.2.2,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/langchain-ai/langchain-financial"
Repository = "https://github.com/langchain-ai/langchain-financial"
Documentation = "https://python.langchain.com/docs/integrations/retrievers/langchain_financial"
"Bug Tracker" = "https://github.com/langchain-ai/langchain-financial/issues"

[tool.hatch.build.targets.wheel]
packages = ["langchain_financial"]

[tool.hatch.build.targets.sdist]
include = [
    "/langchain_financial",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]
